--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Change history for Math::Counting
 
 {{$NEXT}}
+    - Cleaned up SEE ALSO.
 
 0.1305 2015-10-19 21:47:24
     - Added handy plugins to dist.ini.
